--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1275,7 +1275,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="187" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="70942B01-542F-4D4A-8B3B-5DA0656D838B" colorSpace="pattern"/>
+                                <color key="color" patternImage="AD48DB4F-6F6C-4E63-A5CE-D987EFF12E97" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="wood-grain-2.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="434" width="320" height="46"/>
@@ -1497,18 +1497,33 @@
                                 <rect key="frame" x="0.0" y="187" width="320" height="168"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Searching for riders with similar routes ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UaF-GO-yEY">
-                                        <rect key="frame" x="17" y="3" width="287" height="36"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Searching for riders with similar routes ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UaF-GO-yEY">
+                                        <rect key="frame" x="17" y="2" width="287" height="36"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="36" id="55M-8w-ife"/>
-                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nvp-gI-qSz">
-                                        <rect key="frame" x="91" y="120" width="125" height="28"/>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
+                                        <rect key="frame" x="135" y="65" width="37" height="37"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="color" patternImage="F37C6B34-21DA-4B65-A022-72EE2BEE1758" colorSpace="pattern"/>
+                                    </activityIndicatorView>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ride to work tomorrow between 10:30 - 10:45 am" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="3Me-33-mwi">
+                                        <rect key="frame" x="20" y="42" width="280" height="55"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                        <color key="textColor" red="0.25882352939999997" green="0.62745098040000002" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Rest easy and carry on...We'll notify you when we find your crew." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="284" translatesAutoresizingMaskIntoConstraints="NO" id="rVu-7r-i6Y">
+                                        <rect key="frame" x="20" y="102" width="284" height="43"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nvp-gI-qSz">
+                                        <rect key="frame" x="91" y="144" width="125" height="22"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <state key="normal" title="Cancel This Request">
@@ -1519,35 +1534,19 @@
                                             <action selector="cancelButtonTapped:" destination="ddu-Zc-dJg" eventType="touchUpInside" id="uf6-EB-uLm"/>
                                         </connections>
                                     </button>
-                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
-                                        <rect key="frame" x="135" y="65" width="37" height="37"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="38DB151A-3929-4A99-BF5E-EE146B4008C7" colorSpace="pattern"/>
-                                    </activityIndicatorView>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ride to work tomorrow between 10:30 - 10:45 am" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="3Me-33-mwi">
-                                        <rect key="frame" x="20" y="38" width="280" height="83"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="83" id="3ZP-tO-PM5"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                                        <color key="textColor" red="0.25882352939999997" green="0.62745098040000002" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.99502558297574695" blue="0.92248104749216908" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="Nvp-gI-qSz" firstAttribute="leading" secondItem="mnD-o7-NLO" secondAttribute="leading" constant="91" id="Agi-SM-HdL"/>
-                                    <constraint firstAttribute="centerY" secondItem="3Me-33-mwi" secondAttribute="centerY" constant="4.5" id="GSe-iI-sHG"/>
-                                    <constraint firstAttribute="bottom" secondItem="Nvp-gI-qSz" secondAttribute="bottom" constant="20" symbolic="YES" id="KIj-DU-5V3"/>
-                                    <constraint firstItem="3Me-33-mwi" firstAttribute="leading" secondItem="mnD-o7-NLO" secondAttribute="leading" constant="20" symbolic="YES" id="M2o-gu-lT6"/>
-                                    <constraint firstItem="Nvp-gI-qSz" firstAttribute="top" secondItem="U5Q-XR-sJo" secondAttribute="bottom" constant="18" id="Sbe-2n-6lC"/>
-                                    <constraint firstItem="3Me-33-mwi" firstAttribute="centerX" secondItem="UaF-GO-yEY" secondAttribute="centerX" id="lKr-me-CXU"/>
-                                    <constraint firstItem="UaF-GO-yEY" firstAttribute="centerX" secondItem="mnD-o7-NLO" secondAttribute="centerX" id="pHa-2G-eFT"/>
-                                    <constraint firstItem="U5Q-XR-sJo" firstAttribute="centerX" secondItem="Nvp-gI-qSz" secondAttribute="centerX" id="r7w-9T-kBt"/>
-                                    <constraint firstItem="UaF-GO-yEY" firstAttribute="leading" secondItem="mnD-o7-NLO" secondAttribute="leading" constant="17" id="sWA-ZV-MB6"/>
-                                    <constraint firstItem="UaF-GO-yEY" firstAttribute="top" secondItem="mnD-o7-NLO" secondAttribute="top" constant="3" id="usZ-mo-9lr"/>
-                                    <constraint firstItem="3Me-33-mwi" firstAttribute="bottom" secondItem="U5Q-XR-sJo" secondAttribute="bottom" constant="19" id="yvm-c5-WXp"/>
+                                    <constraint firstAttribute="centerX" secondItem="U5Q-XR-sJo" secondAttribute="centerX" constant="6.5" id="1Rb-de-baA"/>
+                                    <constraint firstItem="UaF-GO-yEY" firstAttribute="top" secondItem="mnD-o7-NLO" secondAttribute="top" constant="2" id="JJg-RZ-4dR"/>
+                                    <constraint firstAttribute="bottom" secondItem="Nvp-gI-qSz" secondAttribute="bottom" constant="2" id="N2H-Vr-vNi"/>
+                                    <constraint firstAttribute="centerX" secondItem="Nvp-gI-qSz" secondAttribute="centerX" constant="6.5" id="OuJ-Bx-lHz"/>
+                                    <constraint firstItem="Nvp-gI-qSz" firstAttribute="top" secondItem="rVu-7r-i6Y" secondAttribute="bottom" constant="-1" id="Wt4-ww-aoH"/>
+                                    <constraint firstAttribute="centerY" secondItem="3Me-33-mwi" secondAttribute="centerY" constant="14.5" id="imT-hi-RZg"/>
+                                    <constraint firstAttribute="centerX" secondItem="rVu-7r-i6Y" secondAttribute="centerX" constant="-2" id="jlV-yD-Eyj"/>
+                                    <constraint firstAttribute="centerX" secondItem="3Me-33-mwi" secondAttribute="centerX" id="o4a-34-aEW"/>
+                                    <constraint firstAttribute="centerY" secondItem="U5Q-XR-sJo" secondAttribute="centerY" constant="0.5" id="oka-DJ-lgM"/>
+                                    <constraint firstAttribute="centerX" secondItem="UaF-GO-yEY" secondAttribute="centerX" constant="-0.5" id="yxc-LM-DCK"/>
                                 </constraints>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="footer.png" translatesAutoresizingMaskIntoConstraints="NO" id="lra-f2-ZOm">
@@ -1563,7 +1562,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="66" id="NNa-WO-pwE"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -1619,6 +1618,7 @@
                         <outlet property="nameLabel2" destination="YDx-8n-Kga" id="3VL-lh-nhc"/>
                         <outlet property="nameLabel3" destination="vn3-Ga-XJ3" id="khA-gM-bC7"/>
                         <outlet property="rideInfoLabel" destination="3Me-33-mwi" id="AUQ-oW-XxM"/>
+                        <outlet property="waitingLabel" destination="rVu-7r-i6Y" id="AEK-22-Ino"/>
                         <segue destination="adg-RW-m0r" kind="modal" identifier="toMeetCrew" id="SRO-DO-QCq"/>
                     </connections>
                 </viewController>
@@ -1850,7 +1850,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="38DB151A-3929-4A99-BF5E-EE146B4008C7" width="320" height="460">
+        <image name="AD48DB4F-6F6C-4E63-A5CE-D987EFF12E97" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11737,7 +11737,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="70942B01-542F-4D4A-8B3B-5DA0656D838B" width="320" height="460">
+        <image name="F37C6B34-21DA-4B65-A022-72EE2BEE1758" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
